@@ -1,12 +1,16 @@
 package com.paragon.mixins.render.gui;
 
 import com.paragon.Paragon;
+import com.paragon.impl.event.render.gui.GetChatLineCountEvent;
 import com.paragon.impl.event.render.gui.RenderChatEvent;
+import net.minecraft.client.gui.ChatLine;
 import net.minecraft.client.gui.Gui;
 import net.minecraft.client.gui.GuiNewChat;
 import org.spongepowered.asm.mixin.Mixin;
 import org.spongepowered.asm.mixin.injection.At;
 import org.spongepowered.asm.mixin.injection.Redirect;
+
+import java.util.List;
 
 @Mixin(GuiNewChat.class)
 public class MixinGuiNewChat {
@@ -19,6 +23,22 @@ public class MixinGuiNewChat {
         if (!chatEvent.isCancelled()) {
             Gui.drawRect(x, y, x2, y2, chatEvent.getColour());
         }
+    }
+
+    @Redirect(method = "setChatLine", at = @At(value = "INVOKE", target = "Ljava/util/List;size()I", ordinal = 0))
+    public int hookSetChatLineOrd0(List<ChatLine> instance) {
+        GetChatLineCountEvent event = new GetChatLineCountEvent(instance.size());
+        Paragon.INSTANCE.getEventBus().post(event);
+
+        return event.getSize();
+    }
+
+    @Redirect(method = "setChatLine", at = @At(value = "INVOKE", target = "Ljava/util/List;size()I", ordinal = 2))
+    public int hookSetChatLineOrd2(List<ChatLine> instance) {
+        GetChatLineCountEvent event = new GetChatLineCountEvent(instance.size());
+        Paragon.INSTANCE.getEventBus().post(event);
+
+        return event.getSize();
     }
 
 }
