@@ -1,0 +1,9 @@
+package com.paragon.impl.event.render.gui
+
+import com.paragon.bus.event.Event
+
+/**
+ * @author Surge
+ * @since 01/12/2022
+ */
+class GetChatLineCountEvent(var size: Int) : Event()
